tests/ui/feature-gates/feature-gate-unboxed-closures-method-calls.stderr
error[E0658]: use of unstable library feature 'fn_traits'
  --> $DIR/feature-gate-unboxed-closures-method-calls.rs:4:7
   |
LL |     f.call(());
   |       ^^^^
   |
   = note: see issue #29625 <https://github.com/crablang/crablang/issues/29625> for more information
   = help: add `#![feature(fn_traits)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'fn_traits'
  --> $DIR/feature-gate-unboxed-closures-method-calls.rs:5:7
   |
LL |     f.call_mut(());
   |       ^^^^^^^^
   |
   = note: see issue #29625 <https://github.com/crablang/crablang/issues/29625> for more information
   = help: add `#![feature(fn_traits)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'fn_traits'
  --> $DIR/feature-gate-unboxed-closures-method-calls.rs:6:7
   |
LL |     f.call_once(());
   |       ^^^^^^^^^
   |
   = note: see issue #29625 <https://github.com/crablang/crablang/issues/29625> for more information
   = help: add `#![feature(fn_traits)]` to the crate attributes to enable

error: aborting due to 3 previous errors

For more information about this error, try `crablangc --explain E0658`.
